message LogEntry{
	required uint32 type = 1;
	required string log = 2;
}
